--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Hairalyze</title>
-  <link rel="stylesheet" href="style.css">
   <link rel="icon" type="image/png" href="Hairalyze Logo.png" />
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header>
@@ -19,20 +19,20 @@
   </header>
 
   <section class="testimonials">
-    <h2 style="font-size: 2rem; margin: 40px 0 20px;">What People Are Saying</h2>
+    <h2>What People Are Saying</h2>
     <div class="testimonial-container">
       <div class="testimonial" id="testimonial1">
         <p>"Hairalyze changed my entire routine. I finally understand what my hair needs and I’m seeing results!"</p>
         <img src="https://via.placeholder.com/150" alt="User 1" />
       </div>
     </div>
-    <div class="testimonial-container" style="display: none;">
+    <div class="testimonial-container">
       <div class="testimonial" id="testimonial2">
         <p>"Curlina is like my personal hair coach. I never thought I’d rely on AI this much for beauty advice."</p>
         <img src="https://via.placeholder.com/150" alt="User 2" />
       </div>
     </div>
-    <div class="testimonial-container" style="display: none;">
+    <div class="testimonial-container">
       <div class="testimonial" id="testimonial3">
         <p>"Tracking my hair health like fitness progress? Genius. Love how simple yet powerful the app is."</p>
         <img src="https://via.placeholder.com/150" alt="User 3" />
@@ -44,24 +44,30 @@
     <h2>Frequently Asked Questions</h2>
     <div class="faq-item">
       <div class="faq-question">What is Hairalyze?</div>
-      <div class="faq-answer">Hairalyze is an AI-powered tool that scans your hair from a photo and gives you real feedback—like how frizzy, oily, dry, or damaged it is. It helps you understand your hair's condition and suggests how to care for it more effectively.</div>
+      <div class="faq-answer">Hairalyze is an AI-powered tool that scans your hair from a photo and gives you real feedback—like how frizzy, oily, dry, or damaged it is.</div>
     </div>
     <div class="faq-item">
       <div class="faq-question">Is Hairalyze free to use?</div>
-      <div class="faq-answer">Hairalyze offers a free version with essential features, and will introduce premium options with enhanced insights as development continues.</div>
+      <div class="faq-answer">Hairalyze offers a free version with essential features, and will introduce premium options as development continues.</div>
     </div>
     <div class="faq-item">
       <div class="faq-question">What do I need to get started?</div>
-      <div class="faq-answer">Just take a photo of your hair, and Hairalyze will analyze it instantly. You'll receive personalized ratings, see trends over time, and even chat with your AI stylist, Curlina, for tailored advice.</div>
+      <div class="faq-answer">Just take a photo of your hair, and Hairalyze will analyze it instantly. You'll receive personalized ratings and tips.</div>
     </div>
   </section>
 
   <footer>
     &copy; 2025 Hairalyze. All rights reserved.<br />
     <span>Follow us on:
-      <a href="https://www.tiktok.com" target="_blank"><img src="https://cdn.jsdelivr.net/npm/simple-icons@v9/icons/tiktok.svg" alt="tiktok" /></a>
-      <a href="https://www.instagram.com" target="_blank"><img src="https://cdn.jsdelivr.net/npm/simple-icons@v9/icons/instagram.svg" alt="instagram" /></a>
-      <a href="https://www.linkedin.com/company/hairalyze/" target="_blank"><img src="https://cdn.jsdelivr.net/npm/simple-icons@v9/icons/linkedin.svg" alt="LinkedIn" /></a>
+      <a href="https://www.tiktok.com" target="_blank">
+        <img src="https://cdn.jsdelivr.net/npm/simple-icons@v9/icons/tiktok.svg" alt="TikTok" />
+      </a>
+      <a href="https://www.instagram.com" target="_blank">
+        <img src="https://cdn.jsdelivr.net/npm/simple-icons@v9/icons/instagram.svg" alt="Instagram" />
+      </a>
+      <a href="https://www.linkedin.com/company/hairalyze/" target="_blank">
+        <img src="https://cdn.jsdelivr.net/npm/simple-icons@v9/icons/linkedin.svg" alt="LinkedIn" />
+      </a>
     </span>
   </footer>
 
