--- a/index.html
+++ b/index.html
@@ -25,7 +25,15 @@
         </a>
       </div>
       <div class="app-preview">
-        <lottie-player src="https://assets2.lottiefiles.com/packages/lf20_xyadoh9h.json" background="transparent" speed="1" style="width: 300px; height: 300px;" loop autoplay></lottie-player>
+        <div class="phone-frame">
+          <img src="app-screenshot-1.png" alt="Hairalyze App Screenshot 1" class="app-screenshot" />
+        </div>
+        <div class="phone-frame">
+          <img src="app-screenshot-2.png" alt="Hairalyze App Screenshot 2" class="app-screenshot" />
+        </div>
+        <div class="phone-frame">
+          <img src="app-screenshot-3.png" alt="Hairalyze App Screenshot 3" class="app-screenshot" />
+        </div>
       </div>
     </div>
   </header>
@@ -116,7 +124,7 @@
         <a href="https://www.tiktok.com" target="_blank" aria-label="TikTok">
           <img src="https://cdn.jsdelivr.net/npm/simple-icons@v9/icons/tiktok.svg" alt="TikTok" />
         </a>
-        <a href="https://www.instagram.com" target="_blank" aria-label="Instagram">
+        <a href="https://www.instagram.com/hairalyze/" target="_blank" aria-label="Instagram">
           <img src="https://cdn.jsdelivr.net/npm/simple-icons@v9/icons/instagram.svg" alt="Instagram" />
         </a>
         <a href="https://www.linkedin.com/company/hairalyze/" target="_blank" aria-label="LinkedIn">
