--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <div class="testimonial" data-motion="fade-up">
           <p>"Hairalyze changed my entire routine. I finally understand what my hair needs and I'm seeing results!"</p>
           <div class="testimonial-author">
-            <img src="https://via.placeholder.com/50" alt="User 1" />
+            <img src="https://cdn-icons-png.flaticon.com/512/1077/1077114.png" alt="User 1" />
             <div>
               <strong>Sarah M.</strong>
               <div>Curly Hair Enthusiast</div>
@@ -78,7 +78,7 @@
         <div class="testimonial" data-motion="fade-up" data-delay="0.2">
           <p>"Curlina is like my personal hair coach. I never thought I'd rely on AI this much for beauty advice."</p>
           <div class="testimonial-author">
-            <img src="https://via.placeholder.com/50" alt="User 2" />
+            <img src="https://cdn-icons-png.flaticon.com/512/1077/1077063.png" alt="User 2" />
             <div>
               <strong>Jessica K.</strong>
               <div>Hair Care Expert</div>
@@ -88,7 +88,7 @@
         <div class="testimonial" data-motion="fade-up" data-delay="0.4">
           <p>"Tracking my hair health like fitness progress? Genius. Love how simple yet powerful the app is."</p>
           <div class="testimonial-author">
-            <img src="https://via.placeholder.com/50" alt="User 3" />
+            <img src="https://cdn-icons-png.flaticon.com/512/1077/1077114.png" alt="User 3" />
             <div>
               <strong>Michael T.</strong>
               <div>Tech Enthusiast</div>
