--- a/index.html
+++ b/index.html
@@ -66,32 +66,29 @@
       <h2>What People Are Saying</h2>
       <div class="testimonial-container">
         <div class="testimonial" data-motion="fade-up">
-          <p>"Hairalyze changed my entire routine. I finally understand what my hair needs and I'm seeing results!"</p>
+          <p class="testimonial-text">"Hairalyze has completely transformed my hair care routine. The personalized recommendations are spot on!"</p>
           <div class="testimonial-author">
-            <img src="https://cdn-icons-png.flaticon.com/512/1077/1077114.png" alt="User 1" />
             <div>
-              <strong>Sarah M.</strong>
-              <div>Curly Hair Enthusiast</div>
+              <h4>Sarah M.</h4>
+              <p>Verified User</p>
             </div>
           </div>
         </div>
         <div class="testimonial" data-motion="fade-up" data-delay="0.2">
-          <p>"Curlina is like my personal hair coach. I never thought I'd rely on AI this much for beauty advice."</p>
+          <p class="testimonial-text">"Finally, an app that understands my hair type and gives me real solutions. Love it!"</p>
           <div class="testimonial-author">
-            <img src="https://cdn-icons-png.flaticon.com/512/1077/1077063.png" alt="User 2" />
             <div>
-              <strong>Jessica K.</strong>
-              <div>Hair Care Expert</div>
+              <h4>Michael T.</h4>
+              <p>Verified User</p>
             </div>
           </div>
         </div>
         <div class="testimonial" data-motion="fade-up" data-delay="0.4">
-          <p>"Tracking my hair health like fitness progress? Genius. Love how simple yet powerful the app is."</p>
+          <p class="testimonial-text">"The AI analysis is incredible. It's like having a professional stylist in my pocket!"</p>
           <div class="testimonial-author">
-            <img src="https://cdn-icons-png.flaticon.com/512/1077/1077114.png" alt="User 3" />
             <div>
-              <strong>Michael T.</strong>
-              <div>Tech Enthusiast</div>
+              <h4>Emma R.</h4>
+              <p>Verified User</p>
             </div>
           </div>
         </div>
