--- a/index.html
+++ b/index.html
@@ -65,29 +65,29 @@
     <div class="container">
       <h2>What People Are Saying</h2>
       <div class="testimonial-container">
-        <div class="testimonial" data-motion="fade-up">
-          <p class="testimonial-text">"Hairalyze has completely transformed my hair care routine. The personalized recommendations are spot on!"</p>
+        <div class="testimonial">
+          <p class="testimonial-text">"This app is literally magic! It detected my conditioner allergy just from a photo of my hair. My hair has improved so much since using Hairalyze's personalized recommendations."</p>
           <div class="testimonial-author">
             <div>
-              <h4>Sarah M.</h4>
+              <h4>App Store Review</h4>
               <p>Verified User</p>
             </div>
           </div>
         </div>
-        <div class="testimonial" data-motion="fade-up" data-delay="0.2">
-          <p class="testimonial-text">"Finally, an app that understands my hair type and gives me real solutions. Love it!"</p>
+        <div class="testimonial">
+          <p class="testimonial-text">"Hairalyze's detailed hair scan helped me fix my hair issues. The advice was incredibly useful - my mullet wouldn't be what it is today without it!"</p>
           <div class="testimonial-author">
             <div>
-              <h4>Michael T.</h4>
+              <h4>App Store Review</h4>
               <p>Verified User</p>
             </div>
           </div>
         </div>
-        <div class="testimonial" data-motion="fade-up" data-delay="0.4">
-          <p class="testimonial-text">"The AI analysis is incredible. It's like having a professional stylist in my pocket!"</p>
+        <div class="testimonial">
+          <p class="testimonial-text">"I absolutely LOVE Curlina!! It's like having a professional stylist in my pocket! The personalized recommendations have completely transformed my hair care routine."</p>
           <div class="testimonial-author">
             <div>
-              <h4>Emma R.</h4>
+              <h4>App Store Review</h4>
               <p>Verified User</p>
             </div>
           </div>
