--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Hairalyze - AI-Powered Hair Care Analysis</title>
-  <link rel="icon" type="image/png" href="Hairalyze Logo.png" />
+  <link rel="icon" type="image/webp" href="Hairalyze Logo.webp" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
   <script src="https://unpkg.com/framer-motion@10.16.4/dist/framer-motion.js"></script>
@@ -26,13 +26,13 @@
       </div>
       <div class="app-preview">
         <div class="phone-frame">
-          <img src="app-screenshot-1.png" alt="Hairalyze App Screenshot 1" class="app-screenshot" />
+          <img src="app-screenshot-1.webp" alt="Hairalyze App Screenshot 1" class="app-screenshot" />
         </div>
         <div class="phone-frame">
-          <img src="app-screenshot-2.png" alt="Hairalyze App Screenshot 2" class="app-screenshot" />
+          <img src="app-screenshot-2.webp" alt="Hairalyze App Screenshot 2" class="app-screenshot" />
         </div>
         <div class="phone-frame">
-          <img src="app-screenshot-3.png" alt="Hairalyze App Screenshot 3" class="app-screenshot" />
+          <img src="app-screenshot-3.webp" alt="Hairalyze App Screenshot 3" class="app-screenshot" />
         </div>
       </div>
     </div>
