--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
       </div>
       <div class="faq-item" data-motion="fade-up" data-delay="0.2">
         <div class="faq-question">Is Hairalyze free to use?</div>
-        <div class="faq-answer">Hairalyze offers a free version with essential features, and will introduce premium options with enhanced insights as development continues.</div>
+        <div class="faq-answer">Hairalyze operates on a monthly subscription model, offering premium AI-powered hair care analysis and personalized recommendations. We frequently offer special discounts, especially when you use a someone's referral code. Keep an eye out for our promotional offers to get the best value for your hair care journey.</div>
       </div>
       <div class="faq-item" data-motion="fade-up" data-delay="0.4">
         <div class="faq-question">What do I need to get started?</div>
