--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       <h2>What People Are Saying</h2>
       <div class="testimonial-container">
         <div class="testimonial">
-          <p class="testimonial-text">"This app is literally magic! It detected my conditioner allergy just from a photo of my hair. My hair has improved so much since using Hairalyze's personalized recommendations."</p>
+          <p class="testimonial-text">"This app is literally magic! It found out I am allergic to my conditioner just from a picture of my hair. My hair has improved so much since using its recommendations."</p>
           <div class="testimonial-author">
             <div>
               <h4>App Store Review</h4>
@@ -75,7 +75,7 @@
           </div>
         </div>
         <div class="testimonial">
-          <p class="testimonial-text">"Hairalyze's detailed hair scan helped me fix my hair issues. The advice was incredibly useful - my mullet wouldn't be what it is today without it!"</p>
+          <p class="testimonial-text">"Hairalyze's detailed hair scan helped me fix my hair issues. The advice was surpisingly useful. My glorious mullet wouldn't be what it is today without it!"</p>
           <div class="testimonial-author">
             <div>
               <h4>App Store Review</h4>
